--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
   <body>
+    <ul class="heroList"></ul>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
